fix bug and add messagebox and add music audio player

--- a/MS-angular/app/index.html
+++ b/MS-angular/app/index.html
@@ -11,6 +11,9 @@
 </head>
 <body ng-app="myApp">
 	<div class='main-view' ui-view></div>
+	<music-message-box id="messageBox"></music-message-box>
+</div>
+
 </body>
 	<!-- angular -->
 	<script type="text/javascript" src='/bower_components/angular/angular.min.js'></script>
@@ -30,6 +33,7 @@
 	<script type="text/javascript" src='/components/musicUploader/musicUploader.js'></script>
 	<script type="text/javascript" src='/components/musicNav/musicNav.js'></script>
 	<script type="text/javascript" src='/components/musicModal/musicModal.js'></script>
+	<script type="text/javascript" src='/components/musicMessageBox/musicMessageBox.js'></script>
 	<!-- controller -->
 	<script type="text/javascript" src="./javascripts/mainController.js"></script>
 	<script type="text/javascript" src="./javascripts/loginController.js"></script>
