add apply age , change some backsite code

--- a/MS-angular/app/index.html
+++ b/MS-angular/app/index.html
@@ -36,6 +36,7 @@
 	<script type="text/javascript" src='/components/musicMessageBox/musicMessageBox.js'></script>
 	<!-- controller -->
 	<script type="text/javascript" src="./javascripts/mainController.js"></script>
+	<script type="text/javascript" src="./javascripts/applyController.js"></script>
 	<script type="text/javascript" src="./javascripts/loginController.js"></script>
 	<script type="text/javascript" src="./javascripts/homeController.js"></script>
 	<script type="text/javascript" src="./javascripts/checkFriendRequestController.js"></script>
