目前情况如下：（之后使用git gui处理提交信息） 1、angualr版本较为完善 2、vue版本较为完善（本次更新apply页面，音乐播放器，修复bug） 3、react版本与angular2版本待完善 4、文档更新

--- a/MS-vue-ES6/app/index.html
+++ b/MS-vue-ES6/app/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div id="app">
         	<router-view></router-view>
+        	<music-message-box id="messageBox"></music-message-box>
     	</div>
 	</body>
 </html>
