4个版本的首页修改和网页图标添加

--- a/MS-vue-ES6/app/index.html
+++ b/MS-vue-ES6/app/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>音乐分享平台</title>
+		<link rel="shortcut icon" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1506894416689&di=cdc507824df9c5925ca789c31d07cfc8&imgtype=0&src=http%3A%2F%2Fimg2.web07.cn%2FUpPic%2FPng%2F201506%2F12%2F5113321211214011.png"/> 
 	</head>
 	<body>
 		<div id="app">
