vue版本增加动态搜索和加载动画 angular一些小bug的修正 删除vue和angular俩个版本的searchFriend接口 vue版本上传样式修复

--- a/MS-vue-ES6/app/index.html
+++ b/MS-vue-ES6/app/index.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1506894416689&di=cdc507824df9c5925ca789c31d07cfc8&imgtype=0&src=http%3A%2F%2Fimg2.web07.cn%2FUpPic%2FPng%2F201506%2F12%2F5113321211214011.png"/> 
 	</head>
 	<body>
+		<canvas id="c" alt="loading动画"></canvas>
 		<div id="app">
         	<router-view></router-view>
         	<music-message-box id="messageBox"></music-message-box>
