angular2版本添加动态搜索和loading画面 angular2版本上传样式修改 v1.0.0主要工作完成，开始进入收尾整理

--- a/MS-angular2-TS/src/index.html
+++ b/MS-angular2-TS/src/index.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="./assets/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
+	<canvas id="c" alt="loading动画"></canvas>
 	<app-root></app-root>
+	<script src="./assets/loading.js"></script>
 	<script src="./assets/jquery/dist/jquery.min.js"></script>
 	<script src="./assets/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
