--- a/MS-vuex/apps/index.html
+++ b/MS-vuex/apps/index.html
@@ -5,10 +5,14 @@
     <title>musicShare版本选择</title>
     <link rel="stylesheet" href="/global.css">
   </head>
+  <script>
+    window.location.href = "MS-vuex-ES6";    //最后决定不要这个页面，直接跳过去
+  </script>
   <body style="padding: 0 20px">
     <h1>musicShare版本选择</h1>
     <ul>
       <li><a href="MS-vuex-ES6">vue&vuex版本</a></li>
     </ul>
   </body>
+
 </html>
